quick hack to implement a push/copy api
